ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations: # This is information to the Ingress modules of kubernetes, to note that you want the endpoint publicly accessible.
    kubernetes.io/ingress.class: nginx-public
    nginx.ingress.kubernetes.io/enable-cors: "true"
  name: rostbot-public
  labels:
    app: rostbot
spec:
  rules:
    - host: tddc88-company-1-2020.kubernetes-public.it.liu.se
      http:
        paths:
          - path: /
            backend:
              serviceName: rostbot-frontend-service
              servicePort: 80

          - path: /chat/messages
            backend:
              serviceName: bot-backend-service
              servicePort: 80

          - path: /directline/*
            backend:
              serviceName: directline-backend-service
              servicePort: 80
